Created a simple UITableView with dynamicHeight

--- a/ScrollViewExperiments/Base.lproj/Main.storyboard
+++ b/ScrollViewExperiments/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1957.9710144927537" y="137.94642857142856"/>
+            <point key="canvasLocation" x="2046" y="1"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="LTc-eb-lEH">
@@ -105,6 +105,9 @@
                                                 <constraint firstItem="Rp0-GJ-sy1" firstAttribute="leading" secondItem="eHM-ex-RMH" secondAttribute="leading" constant="16" id="Yjt-Kv-OUk"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Ih9-Au-VNt" kind="show" id="1ve-IM-lHz"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="mqi-sl-UKu">
                                         <rect key="frame" x="0.0" y="88" width="414" height="44"/>
@@ -126,7 +129,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFZ-ML-ZWr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1102.8985507246377" y="118.52678571428571"/>
+            <point key="canvasLocation" x="1007" y="354"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jiz-A8-606">
@@ -145,6 +148,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hlg-p2-WS5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="189.85507246376812" y="763.39285714285711"/>
+        </scene>
+        <!--Dynamic Table View Controller-->
+        <scene sceneID="AFe-7d-WRm">
+            <objects>
+                <viewController id="Ih9-Au-VNt" customClass="DynamicTableViewController" customModule="ScrollViewExperiments" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pVc-Zc-pCA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hHI-Ka-gnl">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="120" id="yht-lP-rqx" customClass="LabelTableViewCell" customModule="ScrollViewExperiments" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yht-lP-rqx" id="Rwp-v5-F1X">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYV-N1-hGk">
+                                                    <rect key="frame" x="16" y="16" width="382" height="88"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fYV-N1-hGk" firstAttribute="top" secondItem="Rwp-v5-F1X" secondAttribute="top" constant="16" id="Q2f-Yc-jLf"/>
+                                                <constraint firstItem="fYV-N1-hGk" firstAttribute="leading" secondItem="Rwp-v5-F1X" secondAttribute="leading" constant="16" id="aLH-JV-Zs3"/>
+                                                <constraint firstAttribute="trailing" secondItem="fYV-N1-hGk" secondAttribute="trailing" constant="16" id="m6O-SA-OmW"/>
+                                                <constraint firstAttribute="bottom" secondItem="fYV-N1-hGk" secondAttribute="bottom" constant="16" id="sNF-rf-zaU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentTextLabel" destination="fYV-N1-hGk" id="CUJ-dw-QXB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="N9D-Y1-6jw" firstAttribute="trailing" secondItem="hHI-Ka-gnl" secondAttribute="trailing" id="5q5-mk-urK"/>
+                            <constraint firstItem="hHI-Ka-gnl" firstAttribute="leading" secondItem="N9D-Y1-6jw" secondAttribute="leading" id="YLG-pi-xza"/>
+                            <constraint firstItem="hHI-Ka-gnl" firstAttribute="bottom" secondItem="N9D-Y1-6jw" secondAttribute="bottom" constant="34" id="jTn-NF-g4r"/>
+                            <constraint firstItem="N9D-Y1-6jw" firstAttribute="top" secondItem="hHI-Ka-gnl" secondAttribute="top" constant="44" id="qfl-JD-wcU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="N9D-Y1-6jw"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="hHI-Ka-gnl" id="yS2-Yk-FHq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VCz-Uf-TgU" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2067" y="718"/>
         </scene>
     </scenes>
 </document>
